--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LoginActivity"
+            android:name=".ActivityClass.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,8 +23,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Home" />
-        <activity android:name=".Register" />
+        <activity android:name=".ActivityClass.Home" />
+        <activity android:name=".ActivityClass.Register" />
+        <activity android:name=".FirstTab" />
+        <activity android:name=".ActivityClass.Profile" />
+        <activity android:name=".ActivityClass.Shop" />
+        <activity android:name=".ActivityClass.Tickets"></activity>
     </application>
 
 </manifest>
