--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.juwan.orlandowaves.ActivityClass.Home"
+            android:name=".ActivityClass.Home"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,12 +23,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.juwan.orlandowaves.ActivityClass.LoginActivity" />
-        <activity android:name="com.juwan.orlandowaves.ActivityClass.Register" />
-        <activity android:name="com.juwan.orlandowaves.FirstTab" />
-        <activity android:name="com.juwan.orlandowaves.ActivityClass.Profile" />
-        <activity android:name="com.juwan.orlandowaves.ActivityClass.Shop" />
-        <activity android:name="com.juwan.orlandowaves.ActivityClass.Tickets"></activity>
+        <activity android:name=".ActivityClass.LoginActivity" />
+        <activity android:name=".ActivityClass.Register" />
+        <activity android:name=".FirstTab" />
+        <activity android:name=".ActivityClass.Profile" />
+        <activity android:name=".ActivityClass.Shop" />
+        <activity android:name=".ActivityClass.Tickets" />
     </application>
 
 </manifest>
