--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:10.2.6'
     compile 'com.google.firebase:firebase-core:10.2.6'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'com.paypal.sdk:paypal-android-sdk:2.14.2'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
